# haraldrevery.github.io

./: .eleventyignore  .gitignore  404.html  CLAUDE.md  README.md  _headers  about.html  blog-tag.njk  blog.njk  contact.html  dev.sh  discography.html  discography.njk  download.html  eleventy.config.js  h.html  index.html  index_noscript_pagespeed.html  input.css  input_prose.css  legal.html  llms.txt  main.css  main_max.css  music.html  music_release_template.html  notebook.html  package-lock.json  package.json  prose.css  prose_max.css  robots.txt  search-index.json  site.webmanifest  sitemap.njk  sitemap.xml  template.html  test.html  test2.html  theme.css  (+6 more)
artcover/: info.txt
color_theme_app/: app.js  app.jsx  build.js  color-names.js  color-utils.js  color_theme.html  picker.js  picker.jsx  styles.css  theme-tools.js  theme-tools.jsx
css_bkup/: input.css  input_prose.css  main.css  main_max.css  main_min.css  prose.css  prose_max.css  prose_min.css  theme.css
eleventy_binary/: README.md  build.mjs  compile.sh  runner.mjs
eleventy_njk/: blog.njk  discography.njk  release.njk  search-index.njk  sitemap.njk
eleventy_settings/: base.njk  footer.njk  nav.njk  post.njk  search.njk
html_extras/: 1dgraph.html  2015to2023.html  2024photography.html  2dphaseportrait.html  clock_and_date.html  clock_and_date_v1.html  clock_and_date_v2.html  (+9 more)
page_builder/src-tauri/: Cargo.toml  tauri.conf.json
page_builder/src-tauri/capabilities/: default.json
page_builder/src-tauri/icons/: icon.icns
page_builder/src-tauri/src/: commands.rs  main.rs  repo.rs  server.rs
(+196 files in other folders)
