[package]
name = "page_builder"
version = "1.0.0"
description = "Notebook page builder for haraldrevery.com"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tiny_http = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
imagesize = "0.14"
sha2 = "0.10"

[profile.release]
strip = true
lto = true
codegen-units = 1
